corrections of color contrast

--- a/chamber/styles/chamber-directory.css
+++ b/chamber/styles/chamber-directory.css
@@ -242,7 +242,7 @@ nav {
 }
 
 .list section:nth-child(even) {
-    background-color: #495057;
+    background-color: #353A3E;
 
 }
 
